--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Cyborg - Awesome HTML5 Template</title>
+    <title>INTI SPACE</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -65,11 +65,11 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <!-- ***** Search End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
-                        <li><a href="details.html">Details</a></li>
-                        <li><a href="streams.html">Streams</a></li>
-                        <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                        <li><a href="index.html" class="active">Inicio</a></li>
+                        <li><a href="browse.html">Navegar</a></li>
+                        <li><a href="details.html">Detalles</a></li>
+                        <li><a href="streams.html">Equipo</a></li>
+                        <li><a href="profile.html">Perfil<img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -92,10 +92,10 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-7">
                 <div class="header-text">
-                  <h6>Welcome To Cyborg</h6>
-                  <h4><em>Browse</em> Our Popular Games Here</h4>
+                  <h6>Bienvenido a INTI Space</h6>
+                  <h4><em>ODS</em> en el Aula</h4>
                   <div class="main-button">
-                    <a href="browse.html">Browse Now</a>
+                    <a href="browse.html">Noticias Científicas</a>
                   </div>
                 </div>
               </div>
@@ -108,13 +108,13 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Most Popular</em> Right Now</h4>
+                  <h4><em>Clima y Fenómenos</em> Recientes</h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-01.jpg" alt="">
-                      <h4>Fortnite<br><span>Sandbox</span></h4>
+                      <img src="assets/images/Recientes/reciente_1.jpeg" alt="">
+                      <h4>Imágenes Satelitale<br><span>November 18, 2013</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -123,35 +123,36 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-02.jpg" alt="">
-                      <h4>PubG<br><span>Battle S</span></h4>
+                      <img src="assets/images/Recientes/reciente_2.jpeg" alt="">
+                      <h4>Vapor de Agua<br><span>Jul 2002 - Abril 2024</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> 3.2</li>
+                        <li><i class="fa fa-download"></i> 1.2M</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-03.jpg" alt="">
-                      <h4>Dota2<br><span>Steam-X</span></h4>
+                      <img src="assets/images/Recientes/recientes_3.jpeg" alt="">
+                      <h4>Huracanes Atlántico<br><span>1-30 Nov 2024</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> 2.8</li>
+                        <li><i class="fa fa-download"></i> 5.1M</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-04.jpg" alt="">
-                      <h4>CS-GO<br><span>Legendary</span></h4>
+                      <img src="assets/images/Recientes/recientes_4.jpeg" alt="">
+                      <h4>Energía Renovable<br><span>Viento, Luz y Agua</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
                       </ul>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+
+                  <!-- <div class="col-lg-6">
                     <div class="item">
                       <div class="row">
                         <div class="col-lg-6 col-sm-6">
@@ -176,8 +177,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
+                  </div> -->
+
+                  <!-- <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-07.jpg" alt="">
                       <h4>Warface<br><span>Max 3D</span></h4>
@@ -196,7 +198,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><i class="fa fa-download"></i> 2.3M</li>
                       </ul>
                     </div>
-                  </div>
+                  </div> -->
+
                   <div class="col-lg-12">
                     <div class="main-button">
                       <a href="browse.html">Discover Popular</a>
