--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <img src="assets/images/Recientes/recientes_4.jpeg" alt="">
                       <h4>Energía Renovable<br><span>Viento, Luz y Agua</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> 5.0</li>
+                        <li><i class="fa fa-download"></i> 21.3M</li>
                       </ul>
                     </div>
                   </div>
@@ -202,7 +202,7 @@ https://templatemo.com/tm-579-cyborg-gaming
 
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="browse.html">Explora Favoritos</a>
                     </div>
                   </div>
                 </div>
@@ -215,42 +215,42 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4><em>Energía</em> Renovable y Alternativa</h4>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Dota 2</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>24/08/2036</span></li>
-                  <li><h4>Hours Played</h4><span>634 H 22 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
+                  <li><img src="assets/images/Download/download_1.jpeg" alt="" class="templatemo-item"></li>
+                  <li><h4><a href="https://earthobservatory.nasa.gov/images/152189/peralta-wind-farm-uruguay">Parque Eólico Peralta</a></h4><span>Uruguay</span></li>
+                  <li><h4>Date Added</h4><span>18/12/2023</span></li>
+                  <li><h4>Create</h4><span><a href="https://earthobservatory.nasa.gov/about/emily-cassidy">Emily Cassidy</a></span></li>
+                  <li><h4>Instrumento</h4><span>Landsat 8 — OLI</span></li>
                   <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Fortnite</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>22/06/2036</span></li>
-                  <li><h4>Hours Played</h4><span>740 H 52 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
+                  <li><img src="assets/images/Download/download_2.jpeg" alt="" class="templatemo-item"></li>
+                  <li><h4>La energía solar y las baterías</h4><span>Desierto</span></li>
+                  <li><h4>Date Added</h4><span>07/02/2024</span></li>
+                  <li><h4>Autor</h4><span><a href="https://earthobservatory.nasa.gov/about/lindsey-doermann">Lindsey Doermann</a></span></li>
+                  <li><h4>Instrumento</h4><span>Landsat 9 — OLI-2</span></lLandsat 9 — OLI-2i>
                   <li><div class="main-border-button"><a href="#">Donwload</a></div></li>
                 </ul>
               </div>
               <div class="item last-item">
                 <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>CS-GO</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>21/04/2036</span></li>
-                  <li><h4>Hours Played</h4><span>892 H 14 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
+                  <li><img src="assets/images/Download/download_3.jpeg" alt="" class="templatemo-item"></li>
+                  <li><h4>La planta de energía solar más grande</h4><span>Europa</span></li>
+                  <li><h4>Date Added</h4><span>07/03/2020</span></li>
+                  <li><h4>Autor</h4><span><a href="https://earthobservatory.nasa.gov/about/kasha-patel">Kasha Patel</a></span></li>
+                  <li><h4>Instrumento</h4><span>Landsat 8 — OLI</span></li>
                   <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="main-button">
-                <a href="profile.html">View Your Library</a>
+                <a href="profile.html">Crea una cuenta</a>
               </div>
             </div>
           </div>
@@ -264,9 +264,8 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
-          
-          <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a></p>
+          <p>Copyright © 2024 <a href="#">Inti Space App.</a> All rights reserved. 
+          <br>Design: <a href="https://index.html" target="_blank" title="free CSS templates">Gustavo Jhon</a></p>
         </div>
       </div>
     </div>
