--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
-
-TemplateMo 579 Cyborg Gaming
-
-https://templatemo.com/tm-579-cyborg-gaming
-
--->
   </head>
 
 <body>
@@ -65,11 +58,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <!-- ***** Search End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="index.html" class="active">Inicio</a></li>
-                        <li><a href="browse.html">Navegar</a></li>
-                        <li><a href="details.html">Detalles</a></li>
-                        <li><a href="streams.html">Equipo</a></li>
-                        <li><a href="profile.html">Perfil<img src="assets/images/profile-header.jpg" alt=""></a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="profile.html">Profile<img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -92,10 +82,10 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-7">
                 <div class="header-text">
-                  <h6>Bienvenido a INTI Space</h6>
-                  <h4><em>ODS</em> en el Aula</h4>
+                  <h6>Welcome a INTI Space</h6>
+                  <h4><em>SDGs</em> in the Classroom</h4>
                   <div class="main-button">
-                    <a href="browse.html">Noticias Científicas</a>
+                    <a href="browse.html">Scientific News</a>
                   </div>
                 </div>
               </div>
@@ -108,48 +98,56 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Clima y Fenómenos</em> Recientes</h4>
+                  <h4><em>Climate and Recent</em> Phenomena</h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
+                    <a href="./detail_1.html">
                     <div class="item">
                       <img src="assets/images/Recientes/reciente_1.jpeg" alt="">
-                      <h4>Imágenes Satelitale<br><span>November 18, 2013</span></h4>
+                      <h4>Satellite Images<br><span>November 18, 2013</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
                       </ul>
                     </div>
+                    </a>
                   </div>
                   <div class="col-lg-3 col-sm-6">
+                    <a href="./detail_2.html">
                     <div class="item">
                       <img src="assets/images/Recientes/reciente_2.jpeg" alt="">
-                      <h4>Vapor de Agua<br><span>Jul 2002 - Abril 2024</span></h4>
+                      <h4>Water Vapor<br><span>Jul 2002 - Abril 2024</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 3.2</li>
                         <li><i class="fa fa-download"></i> 1.2M</li>
                       </ul>
                     </div>
+                    </a>
                   </div>
                   <div class="col-lg-3 col-sm-6">
+                    <a href="./detail_3.html">
                     <div class="item">
                       <img src="assets/images/Recientes/recientes_3.jpeg" alt="">
-                      <h4>Huracanes Atlántico<br><span>1-30 Nov 2024</span></h4>
+                      <h4>Atlantic Hurricanes<br><span>1-30 Nov 2024</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 2.8</li>
                         <li><i class="fa fa-download"></i> 5.1M</li>
                       </ul>
                     </div>
+                    </a>
                   </div>
                   <div class="col-lg-3 col-sm-6">
+                    <a href="./detail_4.html">
                     <div class="item">
                       <img src="assets/images/Recientes/recientes_4.jpeg" alt="">
-                      <h4>Energía Renovable<br><span>Viento, Luz y Agua</span></h4>
+                      <h4>Renewable Energy<br><span>Wind, Light and Water</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 5.0</li>
                         <li><i class="fa fa-download"></i> 21.3M</li>
                       </ul>
                     </div>
+                    </a>
                   </div>
 
                   <!-- <div class="col-lg-6">
