--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Explora Favoritos</a>
+                      <a href="browse.html">Explore Favorites</a>
                     </div>
                   </div>
                 </div>
@@ -213,25 +213,25 @@
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Energía</em> Renovable y Alternativa</h4>
+                <h4><em>Energy</em> Renewable and Alternative</h4>
               </div>
               <div class="item">
                 <ul>
                   <li><img src="assets/images/Download/download_1.jpeg" alt="" class="templatemo-item"></li>
-                  <li><h4><a href="https://earthobservatory.nasa.gov/images/152189/peralta-wind-farm-uruguay">Parque Eólico Peralta</a></h4><span>Uruguay</span></li>
+                  <li><h4><a href="https://earthobservatory.nasa.gov/images/152189/peralta-wind-farm-uruguay">Peralta Wind Farm</a></h4><span>Uruguay</span></li>
                   <li><h4>Date Added</h4><span>18/12/2023</span></li>
-                  <li><h4>Create</h4><span><a href="https://earthobservatory.nasa.gov/about/emily-cassidy">Emily Cassidy</a></span></li>
-                  <li><h4>Instrumento</h4><span>Landsat 8 — OLI</span></li>
+                  <li><h4>Author</h4><span><a href="https://earthobservatory.nasa.gov/about/emily-cassidy">Emily Cassidy</a></span></li>
+                  <li><h4>Instrument</h4><span>Landsat 8 — OLI</span></li>
                   <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
                   <li><img src="assets/images/Download/download_2.jpeg" alt="" class="templatemo-item"></li>
-                  <li><h4>La energía solar y las baterías</h4><span>Desierto</span></li>
+                  <li><h4>Solar energy and batteries</h4><span>desert</span></li>
                   <li><h4>Date Added</h4><span>07/02/2024</span></li>
-                  <li><h4>Autor</h4><span><a href="https://earthobservatory.nasa.gov/about/lindsey-doermann">Lindsey Doermann</a></span></li>
-                  <li><h4>Instrumento</h4><span>Landsat 9 — OLI-2</span></lLandsat 9 — OLI-2i>
+                  <li><h4>Author</h4><span><a href="https://earthobservatory.nasa.gov/about/lindsey-doermann">Lindsey Doermann</a></span></li>
+                  <li><h4>Instrument</h4><span>Landsat 9 — OLI-2</span></lLandsat 9 — OLI-2i>
                   <li><div class="main-border-button"><a href="#">Donwload</a></div></li>
                 </ul>
               </div>
@@ -240,15 +240,15 @@
                   <li><img src="assets/images/Download/download_3.jpeg" alt="" class="templatemo-item"></li>
                   <li><h4>La planta de energía solar más grande</h4><span>Europa</span></li>
                   <li><h4>Date Added</h4><span>07/03/2020</span></li>
-                  <li><h4>Autor</h4><span><a href="https://earthobservatory.nasa.gov/about/kasha-patel">Kasha Patel</a></span></li>
-                  <li><h4>Instrumento</h4><span>Landsat 8 — OLI</span></li>
+                  <li><h4>Author</h4><span><a href="https://earthobservatory.nasa.gov/about/kasha-patel">Kasha Patel</a></span></li>
+                  <li><h4>Instrument</h4><span>Landsat 8 — OLI</span></li>
                   <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="main-button">
-                <a href="profile.html">Crea una cuenta</a>
+                <a href="profile.html">Create account</a>
               </div>
             </div>
           </div>
