--- a/detail_3.html
+++ b/detail_3.html
@@ -58,9 +58,7 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
                         <li><a href="details.html" class="active">Details</a></li>
-                        <li><a href="streams.html">Streams</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
@@ -89,7 +87,7 @@
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                      <img src="assets/images/Banner/banner3.jpg" alt="" style="border-radius: 23px;">
                       <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
@@ -143,7 +141,7 @@
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="#">Download Fortnite Now!</a>
+                        <a href="#">Download Now!</a>
                       </div>
                     </div>
                   </div>
