--- a/detail_4.html
+++ b/detail_4.html
@@ -87,7 +87,7 @@
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                      <img src="assets/images/Banner/banner4.jpg" alt="" style="border-radius: 23px;">
                       <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
@@ -141,7 +141,7 @@ In the mid-1990s, plant operators began using enhanced geothermal systems to sus
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="#">Download Fortnite Now!</a>
+                        <a href="#">Downloada Now!</a>
                       </div>
                     </div>
                   </div>
