--- a/detail_3.html
+++ b/detail_3.html
@@ -88,7 +88,7 @@
                   <div class="col-lg-8">
                     <div class="thumb">
                       <img src="assets/images/Banner/banner3.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                      <a href="https://youtu.be/5NNg18Dw-dk?feature=shared" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
                 </div>
